// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTeamStats 1`] = `
{
  "currentLineup": [],
  "events": [],
  "historicPlayers": [],
  "id": 9863,
  "mapStats": {},
  "matches": [],
  "name": "",
  "overview": {
    "draws": undefined,
    "kdRatio": undefined,
    "losses": undefined,
    "mapsPlayed": undefined,
    "roundsPlayed": undefined,
    "totalDeaths": undefined,
    "totalKills": undefined,
    "wins": 0,
  },
  "standins": [],
  "substitutes": [],
}
`;

exports[`getTeamStats 2`] = `
{
  "currentLineup": [],
  "events": [],
  "historicPlayers": [],
  "id": 9918,
  "mapStats": {},
  "matches": [],
  "name": "",
  "overview": {
    "draws": undefined,
    "kdRatio": undefined,
    "losses": undefined,
    "mapsPlayed": undefined,
    "roundsPlayed": undefined,
    "totalDeaths": undefined,
    "totalKills": undefined,
    "wins": 0,
  },
  "standins": [],
  "substitutes": [],
}
`;
